# lib-loader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  builder.py
examples/: CMakeLists.txt  example.cpp
include/: ILibLoader.h  LibLoader.h
internal/: ILibLoader.h  LinuxLibLoader.h  WindowsLibLoader.h
src/: CMakeLists.txt  ILibLoader.cpp  LibLoader.cpp  LibLoader.h  LinuxLibLoader.cpp  LinuxLibLoader.h  WindowsLibLoader.cpp  WindowsLibLoader.h
