cmake_minimum_required(VERSION 3.20)

set(LIBLOADER_INTERNAL_HEADER_DIR ${PROJECT_SOURCE_DIR}/internal)

set(LIBLOADER_INTERFACE_HEADER_DIR ${PROJECT_SOURCE_DIR}/include)

include_directories(
    ${LIBLOADER_INTERNAL_HEADER_DIR}
    ${LIBLOADER_INTERFACE_HEADER_DIR}
)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} LIBLOADER_SRC_DIR)

add_library(LibLoader STATIC ${LIBLOADER_SRC_DIR})

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${LIBLOADER_INTERFACE_HEADER_DIR} ${LIBRARY_OUTPUT_PATH}/include
)
